# alien-tracker

./: .coveragerc  README.rst  pyproject.toml  setup.py
alien_tracker/: __init__.py  app.py  cli.py  decoders.py  detectors.py  renderers.py  representations.py  shingle.py  tracker.py
tests/: test_case_helper.py  test_cli.py  test_decoders.py  test_detectors.py  test_renderers.py  test_representations.py  test_scanner.py  test_shingle.py  test_tracker.py
tests/resources/screens/: sample-screen-output-1-invader.txt  sample-screen-output-2-invaders-0-8-threshold.txt  sample-screen-output-multiple-invaders.txt  sample-screen.txt  simple-output.txt
uml/: app.plantuml
