[tool.poetry]
name = "alien-tracker"
version = "0.1.0"
description = ""
authors = ["Marcio Gualtieri <marcio.gualtieri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
pytest = "^6.2.4"
termcolor = "^1.1.0"
attr = "^0.3.1"
Pygments = "^2.9.0"
colored = "^1.4.2"
click = "^8.0.1"
coverage = "^5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
